# mul-mec

./: .gitignore  BUILD_SUCCESS.md  CMakeLists.txt  README.md
config/: mec.conf  scenario_test.txt
include/: mec_common.h  mec_config.h  mec_error.h  mec_fusion.h  mec_logging.h  mec_memory.h  mec_monitor.h  mec_radar.h  mec_simulator.h  mec_thread.h  mec_v2x.h  mec_video.h
src/: main.c
src/common/: config.c  config_new.c  error.c  logging.c  memory.c  memory_new.c  metrics.c  monitor.c  queue.c  simulator.c  thread.c
src/fusion/: fusion_processor.c
src/radar/: radar_processor.c
src/video/: video_processor_mock.c
